Added support for dialogflow

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -85,7 +85,7 @@ under the License.
               <% if lang.is_a? Hash %>
                 <a href="#" data-language-name="<%= lang.keys.first %>"><%= lang.values.first %></a>
               <% else %>
-                <a href="#" data-language-name="<%= lang %>"><%= lang %></a>
+                <a href="#" data-language-name="<%= lang %>"><%= lang == "ms_bot_framework" ? "MS Bot Framework" : lang == "dialogflow" ? "Dialogflow" : lang %></a>
               <% end %>
             <% end %>
           </div>
